# fuel-debugger

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
client/: Cargo.toml
client/src/: main.rs
docs/: walkthrough.md
examples/: client_usage.rs  example_tx.json
src/: lib.rs  main.rs  names.rs  queries.rs  server.rs
tests/: cli_integration.rs
