[package]
name = "fuel-debugger"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["client"]

[dependencies]
fuel-types = { version = "0.3", features = ["serde-types"] }
# Version >=0.5.1 of fuel-vm is required for the debugging features
fuel-vm = { version = "0.5.1", features = ["serde-types", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.8", features = ["net", "io-util"] }
