[package]
name = "fuel-debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["env", "derive"] }
cynic = { version = "1.0", features = ["surf"] }
fuel-types = { version = "0.3", features = ["serde-types"] }
fuel-vm = { version = "0.6", features = ["serde-types", "debug"] }
phf = { version = "0.10", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellfish = { version = "0.6.0", features = ["rustyline", "async", "tokio"] }
surf = "2.0.0"
tokio = { version = "1.8", features = ["net", "io-util", "macros", "rt-multi-thread"] }

[build-dependencies.fuel-core]
git = "https://github.com/FuelLabs/fuel-core"
branch = "debugging-profiling-wip"
default-features = false
