[package]
name = "fuel-debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["env", "derive"] }
dap = "0.4.1-alpha1"
forc-pkg = { version = "0.47.0", path = "../sway/forc-pkg" }
fuel-core-client = { version = "0.21" }
fuel-types = { version = "0.43", features = ["serde"] }
fuel-vm = { version = "0.43", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0"
shellfish = { version = "0.6.0", features = ["rustyline", "async", "tokio"] }
surf = "2.3"
sway-core = "0.47.0"
sway-types = "0.47.0"
thiserror = "1.0"
tokio = { version = "1.19", features = ["net", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0" # Used by the examples only
escargot = "0.5.7"
portpicker = "0.1.1"
rexpect = "0.4"
