[package]
name = "fuel-debugger-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["env", "derive"] }
fuel-debugger = { path = "../" }
fuel-vm = "0.5.1"
phf = { version = "0.10", features = ["macros"] }
rustyline = "9.1"
serde_json = "1.0"
tokio = { version = "1.8", features = ["net", "io-util", "macros", "rt-multi-thread"] }
